--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 '<a href="'+jw_url+'" id="'+jwid+'" onclick="clickNum(this)" class="a-jump">' +
                                 '    <div class="jump_button">点击跳转</div>' +
                                 '</a>' +
-                                '<div class="powerby">私域引流宝提供技术支持</div>' +
+                                '<div class="powerby">鸣虹网络科技</div>' +
                                 '<iframe src="'+jw_url+'" style="opacity:0;"></iframe>'
                             );
                             
